/*
Get the protobuf compiler:
sudo apt-get install protobuf-compiler

Compile with:
cd path/to/dht/protos
protoc --python_out=/path/to/dht/ kprotocol.proto
*/

//This is the message structure for kademlia messages going over the wire
message Message {
	required bytes messageID        = 1;
	required Node sender            = 2;
	required Command command        = 3;
	repeated bytes arguments        = 4;
}

//A list of commands accepted by nodes
enum Command {
	PING        = 1;
	STUN        = 2;
	STORE       = 3;
	DELETE      = 4;
	FIND_NODE   = 5;
	FIND_VALUE  = 6;
}

//An object containing information about the node.
//Some fields are optional as they aren't needed in all situations.
message Node {
	required bytes guid           = 1;
	optional string ip            = 2;
	optional uint32 port          = 3;
	optional bytes publicKey      = 4;

	//Only use the following if running a merchant server
	optional bool merchant        = 5 [default = false];
	optional Transport transport  = 6;
	optional uint32 serverPort    = 7;

}

//The transport protocol used for the merchant server
enum Transport {
	TCP   = 1;
	RUDP  = 2;
}

//The value returned by a find_value rpc all
//Typically a list of these will be returned for any given keyword.
message Value {
	required bytes contractID     = 1;
	required bytes serializedNode = 2;
}
