/*
Get the protobuf compiler:
sudo apt-get install protobuf-compiler

Compile with:
cd path/to/protos/
protoc --python_out=./ objects.proto
*/

//An object containing information about the node.
//Some fields are optional as they aren't needed in all situations.
message Node {
	required bytes guid            = 1;
	required bytes signedPublicKey = 2; // <64 byte signature><32 byte public key>
	optional string ip             = 3;
	optional uint32 port           = 4;
	optional bool vendor           = 5 [default = false];
}

//The value returned by a FIND_VALUE rpc call
//Typically a list of these will be returned for any given keyword.
message Value {
	required bytes valueKey       = 1;
	required bytes serializedData = 2;
}

//The object returned by the GET_PROFILE rpc call
message Profile {
        required string name              = 1;
        required string country_code      = 2;
        optional bool nsfw                = 3 [default = false];
        optional bool vendor              = 4 [default = false];
        optional string handle            = 5;
        optional string about             = 6;
        optional string website           = 7;
        optional string email             = 8;
        repeated SocialAccount social     = 9;
        optional uint32 primary_color     = 10 [default = 4868168];
        optional uint32 secondary_color   = 11 [default = 5723734];
        optional uint32 background_color  = 12 [default = 2763306];
        optional uint32 text_color        = 13 [default = 16777215];
        optional uint32 follower_count    = 14 [default = 0];
        optional uint32 following_count   = 15 [default = 0];
        optional PGPKey pgp_key           = 16;
        optional bytes avatar_hash        = 17;
        optional bytes header_hash        = 18;

	// Social media account for the profile
    message SocialAccount {
    	required SocialType type  = 1;
    	required string username  = 2;
    	required string proof_url = 3;

    	enum SocialType {
			FACEBOOK  = 1;
			TWITTER   = 2;
			INSTAGRAM = 3;
    	}
    }

    message PGPKey {
    	required bytes publicKey = 1;
    	required bytes signature = 2; // signature must cover GUID
    }
}

message Metadata {
    required string name       = 1;
    required string handle     = 2;
    required bytes avatar_hash = 3;
    required bool nsfw         = 4;
}

message Listings {
    repeated ListingMetadata listing = 1;

    message ListingMetadata {
        required bytes contract_hash  = 1;
        required string title         = 2;
        required bytes thumbnail_hash = 3;
        optional string category      = 4;
        required float price          = 5;
        required string currency_code = 6;
        required bool nsfw            = 7;
        optional string country_code  = 8;
    }
}